Adding a footer to the index.html page

--- a/STARTUP-HTML/index.html
+++ b/STARTUP-HTML/index.html
@@ -6,5 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>J4CK3D HTML</title>
   </head>
-
+  <body>
   <h1> J4CK3D APPLICATION</h1>
+  <footer>
+    <hr />
+    <span class="text-reset">Benji Jackson - Startup Project</span>
+    <br />
+    <a href="https://github.com/BenjiJackson1/startup">My GitHub</a>
+  </footer>
+</body>
+
+
+
