Added login block to index.html

--- a/STARTUP-HTML/index.html
+++ b/STARTUP-HTML/index.html
@@ -7,7 +7,23 @@
     <title>J4CK3D HTML</title>
   </head>
   <body>
-  <h1> J4CK3D APPLICATION</h1>
+  <h1> J4CK3D </h1>
+     <hr />
+        <h3> J4CK3D Login: </h3>
+        <form method="get" action="index.html">
+            <div>
+              <span>@</span>
+              <input type="text" placeholder="Username" />
+            </div>
+            <div>
+              <span>🔒</span>
+              <input type="password" placeholder="Password" />
+            </div>
+            <button type="submit">Login</button>
+            <button type="submit">New User</button>
+          </form>
+
+
   <footer>
     <hr />
     <span class="text-reset">Benji Jackson - Startup Project</span>
