Fixing the spacing on index.html page.

--- a/STARTUP-HTML/index.html
+++ b/STARTUP-HTML/index.html
@@ -1,36 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
-    <!-- Tell browsers not to scale the viewport automatically -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>J4CK3D HTML</title>
-  </head>
-  <body>
-  <h1> J4CK3D </h1>
-     <hr />
+</head>
+
+<body>
+    <header>
+        <h1> J4CK3D 💪</h1>
+    </header>
+    <main>
+        <hr />
         <h3> J4CK3D Login: </h3>
         <form method="get" action="index.html">
             <div>
-              <span>@</span>
-              <input type="text" placeholder="Username" />
+                <span>Username:</span>
+                <input type="text" placeholder="username" />
             </div>
             <div>
-              <span>🔒</span>
-              <input type="password" placeholder="Password" />
+                <span>Password:</span>
+                <input type="password" placeholder="password" />
             </div>
             <button type="submit">Login</button>
             <button type="submit">New User</button>
-          </form>
-
-
-  <footer>
-    <hr />
-    <span class="text-reset">Benji Jackson - Startup Project</span>
-    <br />
-    <a href="https://github.com/BenjiJackson1/startup">My GitHub</a>
-  </footer>
+        </form>
+    </main>
+    <footer>
+        <hr />
+        <span class="text-reset">Benji Jackson - Startup Project</span>
+        <br />
+        <a href="https://github.com/BenjiJackson1/startup">My GitHub</a>
+    </footer>
 </body>
 
-
-
+</html>
