Added feed.html for the feed portion of app.

--- a/STARTUP-HTML/index.html
+++ b/STARTUP-HTML/index.html
@@ -14,7 +14,7 @@
     <main>
         <hr />
         <h3> J4CK3D Login: </h3>
-        <form method="get" action="index.html">
+        <form method="get" action="feed.html">
             <div>
                 <span>Username:</span>
                 <input type="text" placeholder="username" />
