--- a/STARTUP-HTML/feed.html
+++ b/STARTUP-HTML/feed.html
@@ -11,6 +11,9 @@
     <header>
         <h1>J4CK3D 💪</h1>
         <h3>User: Ender Wiggin</h3>
+        <div>
+            <a href='index.html' class = 'button'>New Post </a>
+          </div>
         <hr />
     </header>
 
@@ -55,5 +58,5 @@
         <br />
         <a href="https://github.com/BenjiJackson1/startup">My GitHub</a>
     </footer>
-    
+
 </body>
