Post page for new additions to the feed

--- a/STARTUP-HTML/feed.html
+++ b/STARTUP-HTML/feed.html
@@ -12,12 +12,14 @@
         <h1>J4CK3D 💪</h1>
         <h3>User: Ender Wiggin</h3>
         <div>
-            <a href='index.html' class = 'button'>New Post </a>
+            <a href='index.html' class = 'button'>Create New Post</a>
           </div>
         <hr />
     </header>
 
     <main>
+        <h2> WORKOUT FEED</h2>
+        <hr />
         <h4> Post by: UserX32</h4>
         <p> 9/23/2024 at 12:07 PM</p>
         <h4> Dumbell Chest Press </h4>
