Added more detail about the different pages

--- a/STARTUP-HTML/feed.html
+++ b/STARTUP-HTML/feed.html
@@ -12,7 +12,7 @@
         <h1>J4CK3D 💪</h1>
         <h3>User: Ender Wiggin</h3>
         <div>
-            <a href='index.html' class = 'button'>Create New Post</a>
+            <a href='post.html' class = 'button'>Create New Post</a>
           </div>
         <hr />
     </header>
