Addition of an image to the footers of pages

--- a/STARTUP-HTML/feed.html
+++ b/STARTUP-HTML/feed.html
@@ -59,6 +59,8 @@
         <span class="text-reset">Benji Jackson - Startup Project</span>
         <br />
         <a href="https://github.com/BenjiJackson1/startup">My GitHub</a>
+        <br />
+        <img src="arizona.png" alt="Arizona Landscape" width = 600>
     </footer>
 
 </body>
