--- a/STARTUP-HTML/post.html
+++ b/STARTUP-HTML/post.html
@@ -59,7 +59,7 @@
         </div>
         
         <button> POST! </button>
-        
+
     </main>
 
     <footer>
@@ -67,6 +67,8 @@
         <span class="text-reset">Benji Jackson - Startup Project</span>
         <br />
         <a href="https://github.com/BenjiJackson1/startup">My GitHub</a>
+        <br />
+        <img src="arizona.png" alt="Arizona Landscape" width = 600>
     </footer>
 
 </body>
