making changes to the look of login page

--- a/index.html
+++ b/index.html
@@ -7,13 +7,20 @@
     <title>J4CK3D HTML</title>
 
     <link rel="stylesheet" href="main.css" />
+
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
+      crossorigin="anonymous"
+    />
 </head>
 
-<body>
-    <header>
+<body class="bg-info">
+    <header class="container-fluid bg-light">
         <h1> J4CK3D 💪</h1>
     </header>
-    <main>
+    <main class="container-fluid text-center">
         <hr />
         <h3> J4CK3D Login: </h3>
         <form method="get" action="feed.html">
