Fixed scaling issues and got footer to be sticky

--- a/index.html
+++ b/index.html
@@ -13,11 +13,12 @@
 </head>
 
 <body class="bg-info">
-    <div>
-        <header class="container-fluid bg-light">
-            <h1> J4CK3D 💪</h1>
-        </header>
-        <main class="container-fluid text-center">
+
+    <header class="container-fluid bg-light">
+        <h1> J4CK3D 💪</h1>
+    </header>
+    <main class="container-fluid text-center">
+        <div>
             <h3> J4CK3D Login: </h3>
             <form method="get" action="feed.html">
                 <div class="input-group mb-3">
@@ -31,14 +32,15 @@
                 <button type="submit">Login</button>
                 <button type="submit">New User</button>
             </form>
-        </main>
-        <footer class="bg-light">
-            <div class="container-fluid">
-                <span class="text-reset">Benji Jackson - Startup Project</span>
-                <a class="text-resest" href="https://github.com/BenjiJackson1/startup">My GitHub</a>
-            </div>
-        </footer>
-    </div>
+        </div>
+    </main>
+    <footer class="bg-light">
+        <div class="container-fluid">
+            <span class="text-reset">Benji Jackson - Startup Project</span>
+            <a class="text-reset" href="https://github.com/BenjiJackson1/startup">My GitHub</a>
+        </div>
+    </footer>
+
 </body>
 
 </html>
