Fixed issues with color of background

--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
         integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous" />
 </head>
 
-<body class="bg-info">
+<body class="bg-light">
 
     <header class="container-fluid bg-light">
         <h1> J4CK3D 💪</h1>
     </header>
-    <main class="container-fluid text-center">
+    <main class="container-fluid text-center bg-info">
         <div>
             <h3> J4CK3D Login: </h3>
             <form method="get" action="feed.html">
@@ -29,8 +29,8 @@
                     <span class="input-group-text">Password:</span>
                     <input class="form-control" type="text" placeholder="password" />
                 </div>
-                <button type="submit">Login</button>
-                <button type="submit">New User</button>
+                <button type="submit" class="btn btn-light">Login</button>
+                <button type="submit" class="btn btn-light">New User</button>
             </form>
         </div>
     </main>
