Sytle changes for feed, fixing background color

--- a/feed.html
+++ b/feed.html
@@ -7,19 +7,20 @@
     <title>J4CK3D HTML</title>
 
     <link rel="stylesheet" href="main.css" />
+    <link rel="stylesheet" href="feed.css" />
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous" />
 </head>
 
-<body>
-    <header>
+<body class="bg-light">
+    <header class="container-fluid bg-light">
         <h1>J4CK3D 💪</h1>
-        <h3>User: Ender Wiggin</h3>
-        <div>
-            <a href='post.html' class = 'button'>Create New Post</a>
-          </div>
-        <hr />
+        <h3 class="LeftAlign">User: Ender Wiggin</h3>
+        <a href='post.html' class = 'button'>Create New Post</a>
     </header>
 
-    <main>
+    <main class="container-fluid text-center bg-info">
         <h2> WORKOUT FEED</h2>
         <hr />
         <h4> Post by: UserX32</h4>
