--- a/feed.html
+++ b/feed.html
@@ -10,14 +10,18 @@
     <link rel="stylesheet" href="feed.css" />
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous" />
+        integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous" />
 </head>
 
 <body class="bg-light">
-    <header class="container-fluid bg-light">
-        <h1>J4CK3D 💪</h1>
-        <h3 class="LeftAlign">User: Ender Wiggin</h3>
-        <a href='post.html' class = 'button'>Create New Post</a>
+    <header class="container-fluid bg-light d-flex justify-content-between align-items-center p-3">
+            <div class="text-left">
+                <h1>J4CK3D 💪</h1>
+            </div>
+            <div class="text-center">
+                <h3>User: Ender Wiggin</h3>
+            </div>
+            <a href='post.html' class='button'>Create New Post</a>
     </header>
 
     <main class="container-fluid text-center bg-info">
@@ -27,7 +31,7 @@
         <p> 9/23/2024 at 12:07 PM</p>
         <h4> Dumbell Chest Press </h4>
         <p> Sets: 3 </p>
-        <ul class = "workout"> 
+        <ul class="workout">
             <li> 10 reps, 80 lbs </li>
             <li> 12 reps, 80 lbs</li>
             <li> 12 reps, 75 lbs</li>
@@ -35,7 +39,7 @@
 
         <h4> Chest Fly </h4>
         <p> Sets: 2 </p>
-        <ul class = "workout"> 
+        <ul class="workout">
             <li> 10 reps, 100 lbs </li>
             <li> 10 reps, 110 lbs</li>
 
@@ -48,7 +52,7 @@
         <p> 9/21/2024 at 11:50 PM</p>
         <h4> Leg Press </h4>
         <p> Sets: 3 </p>
-        <ul class = "workout"> 
+        <ul class="workout">
             <li> 10 reps, 130 lbs </li>
             <li> 12 reps, 140 lbs</li>
             <li> 12 reps, 120 lbs</li>
@@ -63,8 +67,9 @@
         <br />
         <a href="https://github.com/BenjiJackson1/startup">My GitHub</a>
         <br />
-        <img src="arizona.png" alt="Arizona Landscape" width = 600>
+        <img src="arizona.png" alt="Arizona Landscape" width=600>
     </footer>
 
 </body>
+
 </html>
