Fixes to the header and footer of feed page

--- a/feed.html
+++ b/feed.html
@@ -21,53 +21,56 @@
             <div class="text-center">
                 <h3>User: Ender Wiggin</h3>
             </div>
-            <a href='post.html' class='button'>Create New Post</a>
+            <a href='post.html' class='btn btn-warning'>Create New Post</a>
     </header>
 
     <main class="container-fluid text-center bg-info">
-        <h2> WORKOUT FEED</h2>
+        <div class="container-fluid bg-warning mylabel"> 
+            <h2> WORKOUT FEED</h2>
+        </div>
+        
+        <div class="workout-container mt-3">
+            <h4> Post by: UserX32</h4>
+            <p> 9/23/2024 at 12:07 PM</p>
+            <h4> Dumbell Chest Press </h4>
+            <p> Sets: 3 </p>
+            <ul class="workout">
+                <li> 10 reps, 80 lbs </li>
+                <li> 12 reps, 80 lbs</li>
+                <li> 12 reps, 75 lbs</li>
+            </ul>
+
+            <h4> Chest Fly </h4>
+            <p> Sets: 2 </p>
+            <ul class="workout">
+                <li> 10 reps, 100 lbs </li>
+                <li> 10 reps, 110 lbs</li>
+
+            </ul>
+            <p> Like This Post ❤️(5)</p>
+        </div>
+
         <hr />
-        <h4> Post by: UserX32</h4>
-        <p> 9/23/2024 at 12:07 PM</p>
-        <h4> Dumbell Chest Press </h4>
-        <p> Sets: 3 </p>
-        <ul class="workout">
-            <li> 10 reps, 80 lbs </li>
-            <li> 12 reps, 80 lbs</li>
-            <li> 12 reps, 75 lbs</li>
-        </ul>
 
-        <h4> Chest Fly </h4>
-        <p> Sets: 2 </p>
-        <ul class="workout">
-            <li> 10 reps, 100 lbs </li>
-            <li> 10 reps, 110 lbs</li>
-
-        </ul>
-        <p> Like This Post ❤️(5)</p>
-
-        <hr />
-
-        <h4> Post by: JJean48</h4>
-        <p> 9/21/2024 at 11:50 PM</p>
-        <h4> Leg Press </h4>
-        <p> Sets: 3 </p>
-        <ul class="workout">
-            <li> 10 reps, 130 lbs </li>
-            <li> 12 reps, 140 lbs</li>
-            <li> 12 reps, 120 lbs</li>
-        </ul>
-        <p> Like This Post ❤️(11)</p>
-
+        <div class="workout-container mb-3">
+            <h4> Post by: JJean48</h4>
+            <p> 9/21/2024 at 11:50 PM</p>
+            <h4> Leg Press </h4>
+            <p> Sets: 3 </p>
+            <ul class="workout">
+                <li> 10 reps, 130 lbs </li>
+                <li> 12 reps, 140 lbs</li>
+                <li> 12 reps, 120 lbs</li>
+            </ul>
+            <p> Like This Post ❤️(11)</p>
+        </div>
     </main>
 
-    <footer>
-        <hr />
-        <span class="text-reset">Benji Jackson - Startup Project</span>
-        <br />
-        <a href="https://github.com/BenjiJackson1/startup">My GitHub</a>
-        <br />
-        <img src="arizona.png" alt="Arizona Landscape" width=600>
+    <footer class="bg-light">
+        <div class="container-fluid">
+            <span class="text-reset">Benji Jackson - Startup Project</span>
+            <a href="https://github.com/BenjiJackson1/startup">My GitHub</a>
+        </div>
     </footer>
 
 </body>
