--- a/feed.html
+++ b/feed.html
@@ -13,8 +13,8 @@
         integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous" />
 </head>
 
-<body class="bg-light">
-    <header class="container-fluid bg-light d-flex justify-content-between align-items-center p-3">
+<body class="bg-warning">
+    <header class="mylabel container-fluid bg-light d-flex justify-content-between align-items-center p-3">
             <div class="text-left">
                 <h1>J4CK3D 💪</h1>
             </div>
