Changes to the containers of each individual post

--- a/feed.html
+++ b/feed.html
@@ -13,7 +13,7 @@
         integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous" />
 </head>
 
-<body class="bg-warning">
+<body class="bg-light">
     <header class="mylabel container-fluid bg-light d-flex justify-content-between align-items-center p-3">
             <div class="text-left">
                 <h1>J4CK3D 💪</h1>
@@ -28,7 +28,6 @@
         <div class="container-fluid bg-warning mylabel"> 
             <h2> WORKOUT FEED</h2>
         </div>
-        
         <div class="workout-container mt-3">
             <h4> Post by: UserX32</h4>
             <p> 9/23/2024 at 12:07 PM</p>
@@ -47,9 +46,8 @@
                 <li> 10 reps, 110 lbs</li>
 
             </ul>
-            <p> Like This Post ❤️(5)</p>
+            <p class="btn btn-dark"> Like This Post ❤️(5)</p>
         </div>
-
         <hr />
 
         <div class="workout-container mb-3">
@@ -62,7 +60,7 @@
                 <li> 12 reps, 140 lbs</li>
                 <li> 12 reps, 120 lbs</li>
             </ul>
-            <p> Like This Post ❤️(11)</p>
+            <p class="btn btn-dark"> Like This Post ❤️(11)</p>
         </div>
     </main>
 
