--- a/post.html
+++ b/post.html
@@ -7,19 +7,26 @@
     <title>J4CK3D HTML</title>
 
     <link rel="stylesheet" href="main.css" />
+    <link rel="stylesheet" href="post.css" />
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous" />
 </head>
 
-<body>
-    <header>
-        <h1>J4CK3D 💪</h1>
-        <h3>User: Ender Wiggin</h3>
+<body class="bg-light">
+    <header class="mylabel container-fluid bg-light d-flex justify-content-between align-items-center p-3">
+        <div class="text-left">
+            <h1>J4CK3D 💪</h1>
+        </div>
+        <div class="text-center">
+            <h3>User: Ender Wiggin</h3>
+        </div>
         <div>
-            <a href='feed.html' class = 'button'>Return to feed</a>
+            <a href='feed.html' class = 'btn btn-warning'>Return to feed</a>
           </div>
-        <hr />
     </header>
 
-    <main>
+    <main class="container-fluid text-center bg-info">
         <div>
             <span>Workout Date:</span>
             <input type="text" placeholder="current_date_&_time" />
@@ -60,17 +67,15 @@
             <input type="text" placeholder="0 lbs" />
         </div>
         
-        <button> POST! </button>
+        <a href="feed.html" class="btn btn-dark"> POST! </a>
 
     </main>
 
-    <footer>
-        <hr />
-        <span class="text-reset">Benji Jackson - Startup Project</span>
-        <br />
-        <a href="https://github.com/BenjiJackson1/startup">My GitHub</a>
-        <br />
-        <img src="arizona.png" alt="Arizona Landscape" width = 600>
+    <footer class="bg-light">
+        <div class="container-fluid">
+            <span class="text-reset">Benji Jackson - Startup Project</span>
+            <a href="https://github.com/BenjiJackson1/startup">My GitHub</a>
+        </div>
     </footer>
 
 </body>
