Added vertical banners to the feed page

--- a/feed.html
+++ b/feed.html
@@ -24,6 +24,9 @@
             <a href='post.html' class='btn btn-warning'>Create New Post</a>
     </header>
 
+    <div class="vertical-text left">J<br>4<br>C<br>K<br>3<br>D</div>
+    <div class="vertical-text right">J<br>4<br>C<br>K<br>3<br>D</div>
+
     <main class="container-fluid text-center bg-info">
         <div class="container-fluid bg-warning mylabel"> 
             <h2> WORKOUT FEED</h2>
