--- a/post.html
+++ b/post.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>J4CK3D HTML</title>
 
-    <link rel="stylesheet" href="post.css" />
     <link rel="stylesheet" href="main.css" />
+    <link rel="stylesheet" href="post.css" />
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous" />
@@ -77,6 +77,7 @@
     <footer class="bg-light">
         <div class="container-fluid">
             <span class="text-reset">Benji Jackson - Startup Project</span>
+            <img href="feed.html" class="myimage" src="arizona.png" alt="Arizona Cactus">
             <a href="https://github.com/BenjiJackson1/startup">My GitHub</a>
         </div>
     </footer>
